Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,5 +6,8 @@ pool:
 
 steps:
 - script: |
+    sudo apt-get -y install gcc-multilib
+  displayName: 'getting deps'
+- script: |
     make
   displayName: 'make'
