--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,9 @@ jobs:
       vmImage: 'macOS-10.14'
     steps:
     - script: |
+        open /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg
+      displayName: 'Install macOS SDK Headers'
+    - script: |
         make build_x64
       displayName: 'make'
     - script: |
