--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ jobs:
       vmImage: 'ubuntu-latest'
     steps:
     - script: |
+        sudo apt-get update;
         sudo apt-get -y install gcc-multilib
       displayName: 'getting deps'
     - script: |
